samples/_failures_safe/1761308561_55cfbe_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_01f03cfa.c: In function ‘main’:
./samples/SAFE/__tmp_01f03cfa.c:156:9: error: expected expression at end of input
  156 |         printf("Compression ratio: %.2f%%\n",
      |         ^~~~~~
./samples/SAFE/__tmp_01f03cfa.c:156:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_01f03cfa.c:156:9: error: expected declaration or statement at end of input
